--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "expo": "^27.0.1",
     "latlng-to-zip": "0.0.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "qs": "^6.5.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
